# vlcpp-compile-test

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  generate_libvlc_lib.py  libvlc.def  libvlc.dumpbin  libvlc.exp  libvlc.lib  mct_project_info.json  mct_user_settings.json  mct_user_toolchain.cmake  renderers.cpp  test.cpp
vlc_include/vlc/: libvlc_version.h
